<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@android:color/white"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:contentDescription="@string/project_describe"
        android:src="@drawable/quadratic"/>

    <EditText
        android:id="@+id/c_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberSigned"
        android:padding="10dp"
        android:hint="@string/c_value_holder" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/prev"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:text="@string/previous"/>

        <Button
            android:id="@+id/solve_equation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_toEndOf="@id/prev"
            android:layout_toRightOf="@id/prev"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:text="@string/solveForX"/>

    </RelativeLayout>

    <TextView
        android:id="@+id/solution_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textAlignment="center"
        android:textSize="40sp"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:visibility="invisible"
        android:text="@string/solution_display"/>

    <Button
        android:id="@+id/reset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/reset"/>

</LinearLayout>